--- a/pagination/index.html
+++ b/pagination/index.html
@@ -7,10 +7,14 @@
 </head>
 <body>
     <div class="pagination"></div>
-    <script src="./jspm_packages/system.js"></script>
-    <script src="./config.js"></script>
+    <script src="jquery-2.1.3.min.js"></script>
+    <script src="jquery.pagination.js"></script>
     <script>
-        System.import('./app');
+    $('.pagination').pagination({
+        pageCount: 10,
+        currentPage: 5,
+        visiblePageCount: 7
+    });
     </script>
 </body>
 </html>
