--- a/gallery/index.html
+++ b/gallery/index.html
@@ -16,12 +16,14 @@
         </ul>
     </div>
     <div class="gallery-main-container">
-        <i class="left fa fa-chevron-left"></i>
         <div class="container">
-
-            <img src="002.jpg" alt="">
+            <i class="left fa fa-chevron-left"></i>
+            <div class="image">
+                <img src="002.jpg" alt="">
+                <i class="close fa fa-close"></i>
+            </div>
+            <i class="right fa fa-chevron-right"></i>
         </div>
-        <i class="left fa fa-chevron-right"></i>
     </div>
 </body>
 </html>
