--- a/gallery/index.html
+++ b/gallery/index.html
@@ -7,23 +7,32 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <div class="gallery blur">
-        <ul>
-            <li><img src="001.jpg" alt=""></li>
-            <li><img src="002.jpg" alt=""></li>
-            <li><img src="003.jpg" alt=""></li>
-            <li><img src="004.jpg" alt=""></li>
-        </ul>
-    </div>
-    <div class="gallery-main-container">
-        <div class="container">
-            <i class="left fa fa-chevron-left"></i>
-            <div class="image">
-                <img src="002.jpg" alt="">
-                <i class="close fa fa-close"></i>
+    <div class="gallery">
+        <div class="gallery-main">
+            <div class="description">
+                <h3 class="title">Demo Main</h3>
+                <div>
+                    Demo Description Demo Description Demo Description Demo Description Demo Description Demo Description Demo Description Demo Description 
+                </div>
             </div>
-            <i class="right fa fa-chevron-right"></i>
+            <img src="002.jpg" alt="">
         </div>
+        <div class="list">
+            <div class="left sub">
+                <i class="left fa fa-chevron-left"></i>
+            </div>
+            <ul class="gallery-list sub">
+                <li><img src="001.jpg" alt=""><h4>Demo List</h4></li>
+                <li><img src="002.jpg" alt=""><h4>Demo List</h4></li>
+                <li><img src="003.jpg" alt=""><h4>Demo List</h4></li>
+                <li><img src="004.jpg" alt=""><h4>Demo List</h4></li>
+                <li><img src="003.jpg" alt=""><h4>Demo List</h4></li>
+            </ul>
+            <div class="right sub">
+                <i class="left fa fa-chevron-right"></i>
+            </div>
+        </div>
+        
     </div>
 </body>
 </html>
