--- a/gallery-3d/index.html
+++ b/gallery-3d/index.html
@@ -8,10 +8,10 @@
 <body>
     <div class="gallery">
         <ul>
-            <li><img src="001.jpg" alt=""></li>
-            <li><img src="002.jpg" alt=""></li>
-            <li><img src="003.jpg" alt=""></li>
-            <li><img src="004.jpg" alt=""></li>
+            <li><img src="../public/images/001.jpg" alt=""></li>
+            <li><img src="../public/images/002.jpg" alt=""></li>
+            <li><img src="../public/images/003.jpg" alt=""></li>
+            <li><img src="../public/images/004.jpg" alt=""></li>
         </ul>
     </div>
 </body>
