--- a/gallery/index.html
+++ b/gallery/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Gallery</title>
-    <link rel="stylesheet" href="./css/font-awesome.min.css">
+    <link rel="stylesheet" href="../public/css/font-awesome.min.css">
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
@@ -15,18 +15,18 @@
                     Demo Description Demo Description Demo Description Demo Description Demo Description Demo Description Demo Description Demo Description 
                 </div>
             </div>
-            <img src="002.jpg" alt="">
+            <img src="../public/images/002.jpg" alt="">
         </div>
         <div class="list">
             <div class="left sub">
                 <i class="left fa fa-chevron-left"></i>
             </div>
             <ul class="gallery-list sub">
-                <li><img src="001.jpg" alt=""><h4>Demo List</h4></li>
-                <li><img src="002.jpg" alt=""><h4>Demo List</h4></li>
-                <li><img src="003.jpg" alt=""><h4>Demo List</h4></li>
-                <li><img src="004.jpg" alt=""><h4>Demo List</h4></li>
-                <li><img src="003.jpg" alt=""><h4>Demo List</h4></li>
+                <li><img src="../public/images/001.jpg" alt=""><h4>Demo List</h4></li>
+                <li><img src="../public/images/002.jpg" alt=""><h4>Demo List</h4></li>
+                <li><img src="../public/images/003.jpg" alt=""><h4>Demo List</h4></li>
+                <li><img src="../public/images/004.jpg" alt=""><h4>Demo List</h4></li>
+                <li><img src="../public/images/003.jpg" alt=""><h4>Demo List</h4></li>
             </ul>
             <div class="right sub">
                 <i class="left fa fa-chevron-right"></i>
