--- a/slider/index.html
+++ b/slider/index.html
@@ -3,23 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>Gallery</title>
-    <link rel="stylesheet" href="./css/font-awesome.min.css">
+    <link rel="stylesheet" href="../public/css/font-awesome.min.css">
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <div class="gallery blur">
         <ul>
-            <li><img src="001.jpg" alt=""></li>
-            <li><img src="002.jpg" alt=""></li>
-            <li><img src="003.jpg" alt=""></li>
-            <li><img src="004.jpg" alt=""></li>
+            <li><img src="../public/images/001.jpg" alt=""></li>
+            <li><img src="../public/images/002.jpg" alt=""></li>
+            <li><img src="../public/images/003.jpg" alt=""></li>
+            <li><img src="../public/images/004.jpg" alt=""></li>
         </ul>
     </div>
     <div class="gallery-main-container">
         <div class="container">
             <i class="left fa fa-chevron-left"></i>
             <div class="image">
-                <img src="002.jpg" alt="">
+                <img src="../public/images/002.jpg" alt="">
                 <i class="close fa fa-close"></i>
             </div>
             <i class="right fa fa-chevron-right"></i>
